Prevent figcaption element text overflow
Line breaks on long words that would overflow their line box are useful in order to maintain readability.

--- a/source/reset.scss
+++ b/source/reset.scss
@@ -79,6 +79,10 @@ dd {
 
 figure {
   margin: 0;
+
+  figcaption {
+    overflow-wrap: break-word;
+  }
 }
 
 // Heading
